cmake_minimum_required (VERSION 2.6)
project(math)
add_executable(Main main.cpp)
add_executable(Addition math/addition.cpp)
add_executable(Division math/division.cpp)
add_executable(Math math/math.cpp)
add_executable(Multiplication math/multiplication.cpp)
add_executable(Subtraction math/subtraction.cpp)
add_executable(Average statistics/average.cpp)
add_executable(Median statistics/median.cpp)
add_executable(Mode statistics/mode.cpp)
add_executable(Range statistics/range.cpp)
add_executable(Statistics statistics/statistics.cpp)
